compiler/tools/fpp-check/test/component/array_undef_type.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/component/array_undef_type.fpp:2.17
  array A = [3] T
                ^
error: symbol T is not defined
note: looking for a type here
